# skillberry-store

./: .dockerignore  .env  .gitignore  CONTRIB.md  DESIGN_REQUIREMENTS.md  Dockerfile  Dockerfile-arm64  Dockerfile-arm64.unused  Dockerfile.base  MANIFEST.in  Makefile  Makefile.default  README.md  concurrency-sync-plan.md  config.yaml  config.yaml.example  conftest.py  import_auth_config.yaml  macos-requirements.txt  main.py  package-lock.json  plugins.state.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  research.txt  setup.py  test.py  test.txt  test_vmcp_server_manager.py
plugins/skillberry-plugin-anthropic-skill-generator/: .env.example  README.md  pyproject.toml
plugins/skillberry-plugin-anthropic-skill-generator/src/skillberry_plugin_anthropic_skill_generator/: __init__.py  __main__.py  manifest.yaml  plugin.py
plugins/skillberry-plugin-anthropic-skill-generator/tests/: __init__.py  conftest.py  test_anthropic_skill_generator_plugin.py
plugins/skillberry-plugin-ask-runspace/: .env.example  README.md  pyproject.toml
plugins/skillberry-plugin-ask-runspace/src/skillberry_plugin_ask_runspace/: plugin.py  presets.py  runner.py
plugins/skillberry-plugin-ask-runspace/tests/: test_ask_runspace_plugin.py
plugins/skillberry-plugin-creator/: README.md  pyproject.toml
plugins/skillberry-plugin-creator/src/skillberry_plugin_creator/: __init__.py  __main__.py  manifest.yaml  plugin.py
plugins/skillberry-plugin-creator/tests/: test_creator_plugin.py
plugins/skillberry-plugin-dast/: README.md  pyproject.toml
plugins/skillberry-plugin-dast/src/skillberry_plugin_dast/: __init__.py  __main__.py  manifest.yaml  plugin.py
plugins/skillberry-plugin-dast/src/skillberry_plugin_dast/engine/: __init__.py  (+8 more)
plugins/skillberry-plugin-dast/tests/: conftest.py  test_dast_plugin.py  test_discover.py  test_fuzz.py  test_generators_registry.py  test_observe.py  test_progress.py  test_runner.py  test_scope.py
plugins/skillberry-plugin-dedupe/: pyproject.toml
plugins/skillberry-plugin-dedupe/src/skillberry_plugin_dedupe/: __main__.py  manifest.yaml  plugin.py
plugins/skillberry-plugin-dependency-tracker/: README.md  pyproject.toml
plugins/skillberry-plugin-dependency-tracker/src/skillberry_plugin_dependency_tracker/: __init__.py  __main__.py  manifest.yaml  plugin.py
plugins/skillberry-plugin-dependency-tracker/tests/: test_dependency_tracker_plugin.py  test_imports.py  test_local_resolution.py  test_pypi_enrichment.py  test_shell_and_languages.py
plugins/skillberry-plugin-doc-generator/: README.md  pyproject.toml
plugins/skillberry-plugin-doc-generator/src/skillberry_plugin_doc_generator/: __init__.py  __main__.py  manifest.yaml  models.py  plugin.py
plugins/skillberry-plugin-doc-generator/tests/: test_backend_selection.py  test_doc_generator_plugin.py  test_generators.py  test_llm_generation.py  test_models.py
plugins/skillberry-plugin-evaluator/: README.md  manifest.yaml  pyproject.toml
plugins/skillberry-plugin-evaluator/src/skillberry_plugin_evaluator/: __init__.py  __main__.py  plugin.py
plugins/skillberry-plugin-evaluator/tests/: conftest.py  test_evaluator_plugin.py
plugins/skillberry-plugin-kagenti-approver/: manifest.yaml  pyproject.toml
plugins/skillberry-plugin-kagenti-approver/src/skillberry_plugin_kagenti_approver/: __main__.py  plugin.py
plugins/skillberry-plugin-kagenti-approver/tests/: test_integration.py  test_kagenti_approver_plugin.py
plugins/skillberry-plugin-mcp-importer/: pyproject.toml
plugins/skillberry-plugin-mcp-importer/src/skillberry_plugin_mcp_importer/: __main__.py  manifest.yaml  plugin.py
plugins/skillberry-plugin-mcp-importer/tests/: conftest.py  test_mcp_importer_plugin.py
plugins/skillberry-plugin-mcp-importer/tests/e2e/: conftest.py  test_mcp_import_and_vmcp_tunnel.py
plugins/skillberry-plugin-provenance/: README.md  manifest.yaml  pyproject.toml
plugins/skillberry-plugin-provenance/src/skillberry_plugin_provenance/: __init__.py  __main__.py  plugin.py
plugins/skillberry-plugin-provenance/tests/: test_github_source.py  test_provenance_plugin.py
plugins/skillberry-plugin-sast/: README.md  pyproject.toml
plugins/skillberry-plugin-sast/src/skillberry_plugin_sast/: __init__.py  __main__.py  manifest.yaml  plugin.py
plugins/skillberry-plugin-sast/tests/: conftest.py  test_bandit_engine.py  test_sast_plugin.py
plugins/skillberry-plugin-sdk/: README.md  pyproject.toml
plugins/skillberry-plugin-sdk/src/skillberry_plugin_sdk/: __init__.py  decorators.py  events.py  lifecycle.py  manifest.py  runner.py  store.py  testing.py
plugins/skillberry-plugin-sdk/tests/: conftest.py  test_decorators.py  test_lifecycle.py  test_manifest.py  test_store.py
plugins/skillberry-plugin-security/: README.md  manifest.yaml  pyproject.toml
plugins/skillberry-plugin-security/src/skillberry_plugin_security/: __init__.py  __main__.py  plugin.py
plugins/skillberry-plugin-security/tests/: test_security_plugin.py
plugins/skillberry-plugin-simulate/: .env.example  README.md  pyproject.toml
plugins/skillberry-plugin-simulate/src/skillberry_plugin_simulate/: __init__.py  __main__.py  config.py  harness_client.py  harness_manager.py  manifest.yaml  openapi_synth.py  orchestrator.py  plugin.py  registry.py  sim_manifests.py  store_adapter.py
plugins/skillberry-plugin-simulate/tests/: test_config.py  test_discovery.py  test_harness_client.py  test_harness_manager.py  test_openapi_synth.py  test_orchestrator.py  test_orchestrator_routing.py  test_plugin.py  test_plugin_endpoints.py  test_registry.py  test_sim_manifests.py
plugins/skillberry-plugin-skill-optimizer/: .env.example  README.md  manifest.yaml  pyproject.toml
plugins/skillberry-plugin-skill-optimizer/src/skillberry_plugin_skill_optimizer/: __init__.py  __main__.py  plugin.py  prompt.py
plugins/skillberry-plugin-skill-optimizer/tests/: conftest.py  test_skill_optimizer_plugin.py
plugins/skillberry-plugin-skillssh-importer/: README.md  pyproject.toml
plugins/skillberry-plugin-skillssh-importer/tests/: test_skillssh_importer_plugin.py
(+887 files in other folders)
