[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillberry-plugin-anthropic-skill-generator"
version = "0.1.0"
description = "Skillberry Store plugin for generating Anthropic skills from descriptions using runspace-agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "runspace-agent[claude]==0.1.0",
]

[project.entry-points."skillberry_store.plugins"]
anthropic-skill-generator = "skillberry_plugin_anthropic_skill_generator.plugin:SkillberryPluginAnthropicSkillGenerator"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["skillberry_plugin_anthropic_skill_generator"]
package-dir = {"" = "src"}