[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillberry-plugin-anthropic-skill-generator"
version = "0.1.0"
description = "Skillberry Store plugin for generating Anthropic skills from descriptions using runspace-agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "skillberry-plugin-sdk",
    "runspace-agent[claude]==0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["skillberry_plugin_anthropic_skill_generator"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
skillberry_plugin_anthropic_skill_generator = ["manifest.yaml"]
