[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillberry-plugin-dependency-tracker"
version = "0.1.0"
description = "Skillberry Store plugin that discovers external Python package dependencies (version + hash, transitive at max depth) for skills, tools and snippets"
readme = "README.md"
requires-python = ">=3.10"
# requests is already a store dependency (used by the provenance plugin); it
# powers the best-effort PyPI enrichment. Local resolution needs no deps.
dependencies = ["requests"]

[project.entry-points."skillberry_store.plugins"]
dependency_tracker = "skillberry_plugin_dependency_tracker.plugin:SkillberryPluginDependencyTracker"

[project.optional-dependencies]
# Robust PEP 440 version comparison for the "update available" signal; the
# engine falls back to string comparison when packaging is absent.
version = [
    "packaging>=21.0",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "fastapi",
]

[tool.setuptools]
packages = [
    "skillberry_plugin_dependency_tracker",
    "skillberry_plugin_dependency_tracker.resolver",
]
package-dir = {"" = "src"}
