[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillberry-plugin-doc-generator"
version = "0.1.0"
description = "Skillberry Store plugin that generates, enriches and drift-checks documentation for skills, tools and snippets"
readme = "README.md"
requires-python = ">=3.10"
# Wired exactly like the security evaluator plugin: documentation is generated
# by a frontier model via llm-switchboard, so it is a hard dependency.
dependencies = [
    "llm-switchboard[litellm]>=0.1.0",
]

[project.entry-points."skillberry_store.plugins"]
doc_generator = "skillberry_plugin_doc_generator.plugin:SkillberryPluginDocGenerator"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "fastapi",
]

[tool.setuptools]
packages = ["skillberry_plugin_doc_generator"]
package-dir = {"" = "src"}
