[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillberry-plugin-kagenti-approver"
version = "0.1.0"
description = "Skillberry Store plugin that labels skills as kagenti-approved based on score tags"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.entry-points."skillberry_store.plugins"]
kagenti-approver = "skillberry_plugin_kagenti_approver.plugin:SkillberryPluginKagentiApprover"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["skillberry_plugin_kagenti_approver"]
package-dir = {"" = "src"}
