[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillberry-plugin-kagenti-approver"
version = "0.1.0"
description = "Skillberry Store plugin that labels skills as kagenti-approved based on score tags"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "skillberry-plugin-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["skillberry_plugin_kagenti_approver"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
skillberry_plugin_kagenti_approver = ["manifest.yaml"]
