[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillberry-plugin-sast"
version = "0.1.0"
description = "Skillberry Store plugin for static analysis (SAST) of skill/tool/snippet code"
readme = "README.md"
requires-python = ">=3.10"
# Core install is light; SAST engines are optional extras (see below) so the
# store does not pull a scanner unless one is wanted.
dependencies = []

[project.entry-points."skillberry_store.plugins"]
sast = "skillberry_plugin_sast.plugin:SkillberryPluginSast"

[project.optional-dependencies]
bandit = [
    "bandit>=1.7",
]
# LLM-based "Fix" capability (optional; scanning works without it).
llm = [
    "llm-switchboard[litellm]>=0.1.0",
]
# Future engines: semgrep = ["semgrep>=1.0"], all = [...]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "fastapi",
]

[tool.setuptools]
packages = ["skillberry_plugin_sast", "skillberry_plugin_sast.engines"]
package-dir = {"" = "src"}
