[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillberry-plugin-security"
version = "0.1.0"
description = "Skillberry Store plugin for evaluating content security using LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llm-switchboard[litellm]>=0.1.0",
]

[project.entry-points."skillberry_store.plugins"]
security = "skillberry_plugin_security.plugin:SkillberryPluginSecurity"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["skillberry_plugin_security"]
package-dir = {"" = "src"}
