[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillberry-plugin-simulate"
version = "0.1.0"
description = "Stand up a simulated parallel vMCP backed by the simulation-harness and toggle real/sim per skill"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "skillberry-plugin-sdk",
    "fastapi>=0.115.12",
    "pydantic>=2.11.1",
    "httpx>=0.28.1",
    "docker>=7.1.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["skillberry_plugin_simulate"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
skillberry_plugin_simulate = ["manifest.yaml"]
