[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillberry-plugin-skill-optimizer"
version = "0.1.0"
description = "Optimize existing Skillberry skills using RunSpace-powered Claude Code"
requires-python = ">=3.10"
dependencies = [
    "skillberry-store",
    "runspace-agent[claude]==0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.entry-points."skillberry_store.plugins"]
skill-optimizer = "skillberry_plugin_skill_optimizer.plugin:SkillberryPluginSkillOptimizer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skillberry_plugin_skill_optimizer = ["knowledge/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
