[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillberry-plugin-skill-optimizer"
version = "0.1.0"
description = "Optimize existing Skillberry skills using RunSpace-powered Claude Code"
requires-python = ">=3.10"
dependencies = [
    "skillberry-plugin-sdk",
    "runspace-agent[claude]==0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools]
packages = ["skillberry_plugin_skill_optimizer"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
skillberry_plugin_skill_optimizer = ["manifest.yaml", "knowledge/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
